Translate footer in index.html

--- a/index.html
+++ b/index.html
@@ -907,18 +907,18 @@
 		
 		<br><br>
 
-		This free, open-source guide was made possible thanks to
-		Nicky's supporters on Patreon.
-		If (seriously, ONLY IF) you have some disposible income in these hard times, you can
-		<a href='https://www.patreon.com/ncase'>throw coins at Nicky!</a>
-		If not, you can share this guide or
-		<a href='https://ncase.me/'>see their other educational art/interactives</a>.
-		(excellent for homeshooling if, say, schools are currently closed
-		due to a pandemic)
+		Questa guida gratuita e open-source è possibile grazie
+		ai supporter di Nicky su Patreon.
+		Se (davvero, SOLO SE) hai reddito disponibile nonostante questi tempi duri, puoi
+		<a href='https://www.patreon.com/ncase'>gettare qualche moneta a Nicky!</a>
+		Altrimenti, puoi condividere questa guida o
+		<a href='https://ncase.me/'>dare un'occhiata al suo materiale educativo interattivo</a>.
+		(perfetto per fare studiare i figli a casa nel caso in cui, ad esempio, le scuole fossero
+		chiuse a causa di una pandemia)
 
 		<br><br>
 
-		Here's some of the generous Patrons who made this possible: 💖
+		Di seguito alcuni dei generosi Patreon che hanno reso possibile tutto questo: 💖
 
 		<br><br>
 
@@ -928,7 +928,7 @@
 
 		<br><br>
 
-		And <i>huge</i> thank you to these folks for playtesting/proofreading:
+		Infine un <i>enorme</i> grazie a queste persone per aver testato le simulazioni e corretto le bozze:
 		Alex Kreitzberg,
 		Amit Patel,
 		EmilyKate McDonough,
@@ -947,19 +947,19 @@
 
 		<br><br>
 
-		Any errors remaining are probably Nicky's fault.
+		Qualunque altro errore è probabilmente colpa di Nicky.
 
 	</div>
 
 </div>
 
 <div id="footnotes_container">
-	<h2 id='show_feetnotes_button'>(Click to show Feetnotes)</h2>
-	<h2 id='shown_feetnotes'>Feetnotes:</h2-->
+	<h2 id='show_feetnotes_button'>(Clicca per mostrare le annotazioni)</h2>
+	<h2 id='shown_feetnotes'>Annotazioni:</h2-->
 </div>
 
 <div id="wash">
-	wash your hands! 👏
+	lavatevi le mani! 👏
 </div>
 
 
