updated translations' note

--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - -->
 
 <div id="translations">
-	Translations!
-	<ul>
-		<li><a href='https://eed3si9n.github.io/covid-19/'>日本語</a></li>
-	</ul>
-
-	<a href='https://github.com/ncase/covid-19#how-to-translate'>
-		Help make a translation?
+	<a href='https://github.com/harisont/covid-19'>
+		Aiutaci a migliorare la traduzione in italiano!
 	</a>
+	<p>
+	Per traduzioni in altre lingue consulta
+	<a href='https://github.com/ncase'>
+		l'originale in inglese
+	</a>
+	</p>
 </div>
 
 <div id="sharing">
