fixed link to original english

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</a>
 	<p>
 	Per traduzioni in altre lingue consulta
-	<a href='https://github.com/ncase'>
+	<a href='https://ncase.me/covid-19/'>
 		l'originale in inglese
 	</a>
 	</p>
