consistency fix (words vs index)

--- a/words/words.html
+++ b/words/words.html
@@ -7,11 +7,11 @@
         </div>
         <div style="font-weight: 500;top: 140px;left: 10px;font-size: 29px;">
             <!--COVID-19 Futures, Explained With Playable Simulations-->
-            Futuri possibili per COVID-19, spiegati con simulazioni giocabili
+            Futuri possibili per COVID-19, spiegati con simulazioni interattive
         </div>
         <div style="font-weight: 100;top: 189px;left: 10px;font-size: 19px;line-height: 21px;">
             <b>
-                🕐 30 min <!--play/read-->lettura/gioco
+                🕐 30 min <!--play/read-->lettura/interazione
                 &nbsp;&middot;&nbsp;
             </b>
             <!--by-->di
