"e ora che succede?"

--- a/index_head.html
+++ b/index_head.html
@@ -4,7 +4,7 @@
 <head>
 
 	<!-- THE BIG META -->
-	<title>E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive</title>
+	<title>E ora che succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive</title>
 	<meta name="description" content="una guida interattiva" /> 
 	<link rel="icon" type="image/png" href="favicon.png">
 	<meta charset="utf-8">
@@ -12,12 +12,12 @@
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive">
+	<meta name="twitter:title" content="E ora che succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive">
 	<meta name="twitter:description" content="una guida interattiva">
 	<meta name="twitter:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
 
 	<!-- Open Graph data -->
-	<meta property="og:title" content="E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive">
+	<meta property="og:title" content="E ora che succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://ncase.me/covid-19/">
 	<meta property="og:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
@@ -26,7 +26,7 @@
 	<meta property="og:site_name" content="What Happens Next? COVID-19 Futures, Explained With Playable Simulations">
 -->
 	<meta property="og:description" content="una guida interattiva">
-	<meta property="og:site_name" content="E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive">
+	<meta property="og:site_name" content="E ora che succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive">
 	
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/littlefoot.css"/>
@@ -59,7 +59,7 @@
 	a raggiungere R &gt; 1
 	<br>
 	<span id='share_title'>
-		E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive
+		E ora che succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive
 	</span>
 	<span id='share_desc'>
 		🔬 Ecco un approfondimento come si deve! Tempo di lettura: 30 min
