--- a/words/words.html
+++ b/words/words.html
@@ -3,7 +3,7 @@
         <iframe id="splash" width="960" height="480" src="banners/splash.html"></iframe>
         <div style="top: 70px;font-size: 75px;font-weight: bold;">
             <!--What Happens Next?-->
-        E adesso cosa succede?
+        E ora che succede?
         </div>
         <div style="font-weight: 500;top: 140px;left: 10px;font-size: 29px;">
             <!--COVID-19 Futures, Explained With Playable Simulations-->
@@ -587,11 +587,11 @@ Sommando i contatti presintomatici a quelli asintomatici (45% + 5%) otteniamo il
 </div>
 <p>Questo semplice &quot;simulatore di volo epidemiologico&quot; ci ha insegnato così tanto. Ci ha permesso di rispondere alle domande dei mesi passati, dei prossimi mesi e prossimi anni.</p>
 <p>Quindi finalmente, torniamo a...</p>
-<!-- NUOVO CAPITOLO - Adesso -->
+<!-- NUOVO CAPITOLO - Ora -->
 <div class="section chapter">
     <div>
         <img src="banners/curve.png" height=480 style="position: absolute;"/>
-        <div><!--Now-->Adesso</div>
+        <div><!--Now-->Ora</div>
     </div>
 </div>
 <!--Plane's sunk. We've scrambled onto the life rafts. It's time to find dry land.[^dry_land]-->
