Nitpicking on index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<!-- THE BIG META -->
 	<title>E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive</title>
-	<meta name="description" content="una guida interattiva" /> 
+	<meta name="description" content="una guida interattiva" />
 	<link rel="icon" type="image/png" href="favicon.png">
 	<meta charset="utf-8">
 	<base target="_blank">
@@ -27,7 +27,7 @@
 -->
 	<meta property="og:description" content="una guida interattiva">
 	<meta property="og:site_name" content="E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive">
-	
+
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/littlefoot.css"/>
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -62,7 +62,7 @@
 		E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive
 	</span>
 	<span id='share_desc'>
-		🔬 Ecco un approfondimento come si deve! Tempo di lettura: 30 min
+		🔬 Ecco un approfondimento fatto come si deve! Tempo di lettura: 30 min
 	</span>
 	<span class='shareables' style='display:block; margin-top:7px; opacity:0.75'></span>
 </div>
@@ -192,8 +192,8 @@
 </div>
 <!--And *that's* where that famous curve comes from! It's not a bell curve, it's not even a "log-normal" curve. It has no name. But you've seen it a zillion times, and beseeched to flatten.-->
 <p>E <em>questo</em> è il modo in cui quella famosa curva viene fuori! Non è una curva a campana, non è neanche una curva &quot;log-normale&quot;. Non ha un nome. Ma l'hai vista millemila volta, pregando che si appiattisca.</p>
-<!--This is the the **SIR Model**,[^sir]    
-(<icon s></icon>**S**usceptible <icon i></icon>**I**nfectious <icon r></icon>**R**ecovered)      
+<!--This is the the **SIR Model**,[^sir]
+(<icon s></icon>**S**usceptible <icon i></icon>**I**nfectious <icon r></icon>**R**ecovered)
 the *second*-most important idea in Epidemiology 101:-->
 <p>Questo è il <strong>modello SIR</strong>,<a href="#fn5" class="footnoteRef" id="fnref5"><sup>5</sup></a><br />
 (<icon s></icon><strong>S</strong>uscettibili <icon i></icon><strong>I</strong>nfetti <icon r></icon>&quot;<strong>R</strong>ecovered&quot; ovvero guaRiti)<br />
@@ -212,7 +212,7 @@ la <em>seconda</em> idea più importate dell'epidemiologia di base:</p>
 <p>Per il COVID-19, si stima che tu sia <icon e></icon> infetto-ma-non-infettivo per 3 giorni <em>in media</em>.<a href="#fn7" class="footnoteRef" id="fnref7"><sup>7</sup></a> Cosa succede se lo aggiungiamo alla simulazione?</p>
 <!--[^latent]: “Assuming an incubation period distribution of mean 5.2 days from a separate study of early COVID-19 cases, we inferred that infectiousness started from 2.3 days (95% CI, 0.8–3.0 days) before symptom onset” (translation: Assuming symptoms start at 5 days, infectiousness starts 2 days before = Infectiousness starts at 3 days) [He, X., Lau, E.H.Y., Wu, P. et al.](https://www.nature.com/articles/s41591-020-0869-5)-->
 <!--
-<b style='color:#ff4040'>Red <b style='color:#FF9393'>+ Pink</b> curve</b> is *current* cases (infectious <icon i></icon> + exposed <span class="nowrap"><icon e></icon>),</span>    
+<b style='color:#ff4040'>Red <b style='color:#FF9393'>+ Pink</b> curve</b> is *current* cases (infectious <icon i></icon> + exposed <span class="nowrap"><icon e></icon>),</span>
 <b style='color:#888'>Gray curve</b> is *total* cases (current + recovered <span class="nowrap"><icon r></icon>):</span>
 -->
 <p><b style='color:#ff4040'>La curva rossa</b><b style='color:#FF9393'>+ rosa</b> sono i casi <em>attivi</em> (infettivi <icon i></icon> + esposti <icon e></icon>),<br />
@@ -766,7 +766,7 @@ Sommando i contatti presintomatici a quelli asintomatici (45% + 5%) otteniamo il
 	<div>
 
 		<!--Help this post get its R > 1: <span class='shareables in_footer' style='position: relative; top: 17px; right: -6px;'></span>-->
-		
+
 		Aiuta questo post a raggiungere R > 1: <span class='shareables in_footer' style='position: relative; top: 17px; right: -6px;'></span>
 		<br><br>
 		Questa guida è di
