changes suggested by grgfgh to open graph metadata

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive">
 	<meta name="twitter:description" content="una guida interattiva">
-	<meta name="twitter:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
+	<meta name="twitter:image" content="https://harisont.github.io/covid-19/sharing/thumbnail.png">
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="E adesso cosa succede? Futuri possibili per COVID-19, spiegati con simulazioni interattive">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://ncase.me/covid-19/">
-	<meta property="og:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
+	<meta property="og:url" content="https://harisont.github.io/covid-19/">
+	<meta property="og:image" content="https://harisont.github.io/covid-19/sharing/thumbnail.png">
 <!--
 	<meta property="og:description" content="an interactive guide">
 	<meta property="og:site_name" content="What Happens Next? COVID-19 Futures, Explained With Playable Simulations">
