added translator's credits

--- a/index_tail.html
+++ b/index_tail.html
@@ -76,6 +76,12 @@
 
 		Qualunque altro errore è probabilmente colpa di Nicky.
 
+		<br><br>
+
+		Mmh, forse no, la maggior parte degli errori sono probabilmente colpa dei traduttori! 😜
+		<br>
+		Traduzione in italiano di: Alessandro Menduni, Arianna Masciolini, Pietro Peterlongo, Simone Falcini.
+
 	</div>
 
 </div>
