programmatorə also below title (as in text)

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             (<!--epidemiologist-->epidemiologo)
             e
             <a href="https://ncase.me/">Nicky Case</a>
-            (<!--art/code-->artista/programmatore<!--trice-->)
+            (<!--art/code-->artista/programmatorə<!--trice-->)
         </div>
     </div>
 </div>
