--- a/words/words.html
+++ b/words/words.html
@@ -19,7 +19,7 @@
             (<!--epidemiologist-->epidemiologo)
             e
             <a href="https://ncase.me/">Nicky Case</a>
-            (<!--art/code-->artista/programmatore<!--trice-->)
+            (<!--art/code-->artista/programmatorə<!--trice-->)
         </div>
     </div>
 </div>
