fixed markup issue #19

--- a/index.html
+++ b/index.html
@@ -463,13 +463,14 @@ la <em>seconda</em> idea più importate dell'epidemiologia di base:</p>
     * Asymptomatics contribute R = 0.1 (5%, though their model has uncertainty and it could be much lower)
     * Environmental stuff like doorknobs contribute R = 0.2 (10%)
 -->
-<pre><code>* I casi sintomatici contribuiscono ad R per lo 0,8 (40%)
-* I casi presintomatici contribuiscono ad R per lo 0,9 (45%)
-* I casi asintomatici contribuiscono ad R per lo 0,1 (5%, anche se il modello ha un margine di incertezza e questo numero potrebbe essere molto più basso)
-* Gli elementi dell&#39;ambiente, come le maniglie delle porte, contribuiscono a R per lo 0,2 (10%)
-
-&lt;!--And add up the pre- &amp; a-symptomatic contacts (45% + 5%) and you get 50% of R!--&gt;
-Sommando i contatti presintomatici a quelli asintomatici (45% + 5%) otteniamo il 50% di R!</code></pre>
+<ul>
+<li>I casi sintomatici contribuiscono ad R per lo 0,8 (40%)</li>
+<li>I casi presintomatici contribuiscono ad R per lo 0,9 (45%)</li>
+<li>I casi asintomatici contribuiscono ad R per lo 0,1 (5%, anche se il modello ha un margine di incertezza e questo numero potrebbe essere molto più basso)</li>
+<li>Gli elementi dell'ambiente, come le maniglie delle porte, contribuiscono a R per lo 0,2 (10%)</li>
+</ul>
+<!--And add up the pre- & a-symptomatic contacts (45% + 5%) and you get 50% of R!-->
+<p>Sommando i contatti presintomatici a quelli asintomatici (45% + 5%) otteniamo il 50% di R!</p>
 <div class="sim">
         <iframe src="sim?stage=int-4a&format=calc" width="285" height="340"></iframe>
 </div>
